test/libsolidity/syntaxTests/nameAndTypeResolution/165_assigning_state_to_const_variable.sol
contract C {
    address const x = msg.sender;
}
// ----
// TypeError: (38-48): Initial value for const variable has to be compile-time const.
